--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
+}
+
 dependencies {
     provided "com.facebook.react:react-native:+"
+    implementation "com.android.support:exifinterface:28.0.0"
 }
